--- a/lk_reg.html
+++ b/lk_reg.html
@@ -14,34 +14,23 @@
         <a href="javascript:history.go(-1)">
             <button class="but" style="height: 58px; width: 58px; background: url(img/back.png); float: left;"></button>
         </a>
-        <form action="lk_in.html">
-            <button class="lk" style="background: url(img/lk.png); background-size: contain;"></button>
-        </form>
     </div>
     <div class="info">
         <div class="book" style="float: left; text-align: center; height: 250px; width: 250px;">
-            <img src="img/book.png"
+            <img src="img/user.jpg"
                 style="margin-top: 20px; height: 200px; width: 200px; background-color: white; border-radius: 30px;" />
         </div>
         <div class="book_info" style="float: left;">
-            <div class="select">Наименование</div>
+            <div class="select">Логин</div>
             <div class="second_text">
                 <span style="font-family: Trebuchet MS;">Тестовое описание книги</span>
             </div>
-            <div class="select">Автор</div>
+            <div class="select">Пароль</div>
             <div class="second_text">
                 <span style="font-family: Trebuchet MS;">Тестовое описание книги</span>
             </div>
-            <div class="select">Редакция</div>
-            <div class="second_text">
-                <span style="font-family: Trebuchet MS;">Тестовое описание книги</span>
-            </div>
-            <div class="select">Наличие</div>
-            <div class="second_text">
-                <span style="font-family: Trebuchet MS;">Тестовое описание книги</span>
-            </div>
-            <button class="about" style="float: left; margin-top: 25px;"><a href="#">В избранное</a></button>
-            <button class="about" style="float: right; margin-top: 25px;"><a href="#">Забронировать</a></button>
+            <button class="about" style="float: left; margin-top: 25px;"><a href="lk.html">Отмена</a></button>
+            <button class="about" style="float: right; margin-top: 25px;"><a href="lk_in.html">Регистрация</a></button>
         </div>
     </div>
     <div id="footer">
