--- a/lk_reg.html
+++ b/lk_reg.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Регистрация</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
     <link rel="stylesheet" href="css/about.css">
 </head>
@@ -23,11 +23,11 @@
         <div class="book_info" style="float: left;">
             <div class="select">Логин</div>
             <div class="second_text">
-                <span style="font-family: Trebuchet MS;">Тестовое описание книги</span>
+                <input type="text" size="30">
             </div>
             <div class="select">Пароль</div>
             <div class="second_text">
-                <span style="font-family: Trebuchet MS;">Тестовое описание книги</span>
+                <input type="text" size="30">
             </div>
             <button class="about" style="float: left; margin-top: 25px;"><a href="lk.html">Отмена</a></button>
             <button class="about" style="float: right; margin-top: 25px;"><a href="lk_in.html">Регистрация</a></button>
