--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Подробная информация</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
     <link rel="stylesheet" href="css/about.css">
 </head>
@@ -16,6 +16,9 @@
         </a>
         <form action="lk_in.html">
             <button class="lk" style="background: url(img/lk.png); background-size: contain;"></button>
+        </form>
+        <form action="#">
+            <button class="lk" style="background: url(img/pen.png); background-size: contain; margin-right: 20px;"></button>
         </form>
     </div>
     <div class="info">
