--- a/lk_in.html
+++ b/lk_in.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Личный кабинет</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
     <link rel="stylesheet" href="css/about.css">
 </head>
