--- a/lk_in.html
+++ b/lk_in.html
@@ -3,11 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Личный кабинет</title>
+    <title>Каталог</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
     <link rel="stylesheet" href="css/about.css">
 </head>
-
+<script>
+    $('.username').append("<p>"+sessionStorage["UserName"]+"</p>");
+</script>
 <body bgcolor="#a1ebe4">
     <div class="up" style="background: url(img/up.png);"></div>
     <div>
@@ -23,12 +26,12 @@
         <div class="book_info" style="float: left;">
             <div class="select">Имя пользователя</div>
             <div class="second_text">
-                <span style="font-family: Trebuchet MS;">Имя пользователя</span>
+                <span class="username" style="font-family: Trebuchet MS;"></span>
             </div>
             <button class="about" style="float: left; margin-top: 25px;"><a href="lk.html">Выход</a></button>
             <button class="about" style="float: right; margin-top: 25px;"><a href="store.html">Каталог</a></button>
-            <button class="about" style="float: left; margin-top: 25px;"><a href="#">Список избранного</a></button>
-            <button class="about" style="float: right; margin-top: 25px;"><a href="#">Список брони</a></button>
+            <button class="about" style="float: left; margin-top: 25px;"><a href="best.html">Список избранного</a></button>
+            <button class="about" style="float: right; margin-top: 25px;"><a href="buy.html">Список брони</a></button>
         </div>
     </div>
     <div id="footer">
