--- a/best.html
+++ b/best.html
@@ -33,7 +33,8 @@ function GetData()
                         <span style="font-family: Trebuchet MS;">${data2['title']}</span>
                         </div>
                         <button class="about" onclick="return Delete(${element['id']});"  style="float: right; margin-top: 10px; margin-bottom: 10px; background-color:brown">Удалить</button>
-                        `; $(".book_info").append(Item);
+                        `; 
+                        $(".book_info").append(Item);
 
                         }
                     });
