--- a/about.html
+++ b/about.html
@@ -54,12 +54,17 @@ var urlParams = new URLSearchParams(window.location.search);
   
        success:function(data)
        {
-
-        console.log("ok");
-        console.log(data);
-           window.location.replace("about.html");
+           window.location.replace("about.html?id="+id);
+       },error:function(req, status, error){
+           if(req.status!=200)
+           {
+                console.log(req.status);
+                console.log(error);
+                alert("Произошла проблема при добавлении записи")
+           }
        }
-    })
+        });
+    
     
     }
     function ToBooking(id){
@@ -73,7 +78,7 @@ var urlParams = new URLSearchParams(window.location.search);
   
        success:function(data)
        {
-           window.location.replace("about.html");
+           window.location.replace("about.html?id="+id);
        },error:function(req, status, error){
            if(req.status!=200){
             console.log(req.status);
