--- a/lk_in.html
+++ b/lk_in.html
@@ -10,10 +10,10 @@
 </head>
 <script>
    var name=sessionStorage["UserName"];
+    console.log(sessionStorage["UserName"]);
+  
 
-   $('.username').append(name);
-
-    document.getElementById("spanName").innerHTML=sessionStorage["UserName"];
+    $("$spanname").append("<div>gfkogohkgok");
 </script>
 <body bgcolor="#a1ebe4">
     <div class="up" style="background: url(img/up.png);"></div>
@@ -30,7 +30,9 @@
         <div class="book_info" style="float: left;">
             <div class="select">Имя пользователя</div>
             <div class="second_text">
-                <span id="spanName" class="username" style="font-family: Trebuchet MS;"></span>
+                <span id="spanname" class="username" style="font-family: Trebuchet MS;">
+                    
+                </span>
             </div>
             <button class="about" style="float: left; margin-top: 25px;"><a href="lk.html">Выход</a></button>
             <button class="about" style="float: right; margin-top: 25px;"><a href="store.html">Каталог</a></button>
